Build from CommonJS source.
- Uses r.js RequireJS optimizer to build release/q.amd.js.
- Creates a temp file with `window.Q = require("./q");` and browserifies that to produce release/q.js.
- Minifies both to produce release/q.min.js and release/q.amd.min.js.
- Browser spec runner uses release/q.js.

--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.9",
     "grunt-contrib-uglify": "~0.2.2",
-    "matcha": "~0.2.0"
+    "matcha": "~0.2.0",
+    "grunt-browserify": "~1.2.1",
+    "grunt-contrib-requirejs": "~0.4.1"
   },
   "scripts": {
     "test": "jasmine-node spec && promises-aplus-tests spec/aplus-adapter",
